Updated the typography pretty much everywhere

--- a/SimTECH/SimTECH/Components/CountryFlag.razor
+++ b/SimTECH/SimTECH/Components/CountryFlag.razor
@@ -1,6 +1,9 @@
 ﻿<span>
     <span class="@flagIconClass">@flagIcon</span>
-    @flagNationName
+    @if (IncludeName)
+    {
+        <MudText>@flagNationName</MudText>
+    }
 </span>
 
 @code {
