--- a/SimTECH/SimTECH/Components/MudCountrySelect.razor
+++ b/SimTECH/SimTECH/Components/MudCountrySelect.razor
@@ -5,7 +5,10 @@
     @foreach (var country in CountrySelectItems)
     {
         <MudSelectItem Value="@country.Code">
-            <span>@country.Flag @country.Name</span>
+            <MudText>
+                @country.Flag
+                @country.Name
+            </MudText>
         </MudSelectItem>
     }
 </MudSelect>
