--- a/SimTECH/SimTECH/Pages/Racing/Race.razor
+++ b/SimTECH/SimTECH/Pages/Racing/Race.razor
@@ -74,7 +74,7 @@
                 <GridChange Change="@context.GridChange" />
             </MudTd>
             <MudTd Class="pa-0">
-                <span class="smol-accent" style="@(ViewHelper.SetFullColourstyle(context.Colour, context.Accent))"></span>
+                <span class="smol-accent" style="@(ViewHelper.SetBackgroundColour(context.Colour))"></span>
             </MudTd>
             <MudTd Class="overflow-hider">
                 <MudStack Row="true" Spacing="1" Class="align-center">
