--- a/SimTECH/SimTECH/Pages/Season/CopyEntrants.razor
+++ b/SimTECH/SimTECH/Pages/Season/CopyEntrants.razor
@@ -7,7 +7,7 @@
             @foreach (var season in Seasons)
             {
                 <MudSelectItem Value="season.Id">
-                    Season @season.Year of @season.LeagueId
+                    <MudText>Season @season.Year of @season.LeagueId</MudText>
                 </MudSelectItem>
             }
         </MudSelect>
