--- a/SimTECH/SimTECH/Pages/Season/PowerRankings.razor
+++ b/SimTECH/SimTECH/Pages/Season/PowerRankings.razor
@@ -36,24 +36,24 @@
             <PropertyColumn Property="e => e.RacePower" />
             <TemplateColumn T="PowerRankModel" Title="A/C/P" Sortable="false">
                 <CellTemplate>
-                    <MudText Typo="Typo.body2">@context.Item.Aero / @context.Item.Chassis / @context.Item.Powertrain</MudText>
+                    <MudText Typo="Typo.caption">@context.Item.Aero / @context.Item.Chassis / @context.Item.Powertrain</MudText>
                 </CellTemplate>
             </TemplateColumn>
             <TemplateColumn T="PowerRankModel" Title="Reliability [D/T/E]" Sortable="false">
                 <CellTemplate>
-                    <MudText Typo="Typo.body2">@context.Item.DriverRel / @context.Item.CarRel / @context.Item.EngineRel</MudText>
+                    <MudText Typo="Typo.caption">@context.Item.DriverRel / @context.Item.CarRel / @context.Item.EngineRel</MudText>
                 </CellTemplate>
             </TemplateColumn>
             <TemplateColumn T="PowerRankModel" Title="Wear" Sortable="false">
                 <CellTemplate>
-                    <MudText Typo="Typo.body2">@context.Item.WearMax ↔ @context.Item.WearMin</MudText>
+                    <MudText Typo="Typo.caption">@context.Item.WearMax ↔ @context.Item.WearMin</MudText>
                 </CellTemplate>
             </TemplateColumn>
             <TemplateColumn T="PowerRankModel" Title="RngMod" Sortable="false">
                 <CellTemplate>
                     @if (context.Item.TraitEffect != null)
                     {
-                        <MudText Typo="Typo.body2">@context.Item.TraitEffect.MinRNG ↔ @context.Item.TraitEffect.MaxRNG</MudText>
+                        <MudText Typo="Typo.caption">@context.Item.TraitEffect.MinRNG ↔ @context.Item.TraitEffect.MaxRNG</MudText>
                     }
                 </CellTemplate>
             </TemplateColumn>
