--- a/SimTECH/SimTECH/Pages/Setup/Traits.razor
+++ b/SimTECH/SimTECH/Pages/Setup/Traits.razor
@@ -14,9 +14,8 @@
         <Columns>
             <HierarchyColumn T="Trait" />
             <PropertyColumn Property="e => e.Name" />
-            <PropertyColumn Property="e => e.Description" />
             <PropertyColumn Property="e => e.Type" />
-            <PropertyColumn Property="e => e.ForWetConditions" Title="Only when wet" />
+            <PropertyColumn Property="e => e.ForWetConditions" Title="For wet" />
             <PropertyColumn Property="e => e.State" />
             <TemplateColumn Sortable="false">
                 <CellTemplate>
@@ -30,11 +29,19 @@
             <MudCard>
                 <MudCardHeader>
                     <CardHeaderContent>
-                        <MudText Typo="Typo.h6">TODO: This detail page lol haha</MudText>
+                        <MudText Typo="Typo.h6">Details for @context.Item.Name</MudText>
                     </CardHeaderContent>
                 </MudCardHeader>
                 <MudCardContent>
                     <MudGrid>
+                        <MudItem xs="6">
+                            <MudPaper>
+                                @(context.Item.Description)
+                            </MudPaper>
+                        </MudItem>
+                        <MudItem xs="6">
+
+                        </MudItem>
                         <MudItem xs="3">
                             <MudPaper Class="d-flex align-center justify-center mud-width-full py-8">
                                 <MudText Typo="Typo.caption">Qualifying pace: @(context.Item.QualifyingPace)</MudText>
