--- a/SimTECH/SimTECH/Pages/Season/AddEntrantsWizard.razor
+++ b/SimTECH/SimTECH/Pages/Season/AddEntrantsWizard.razor
@@ -1,8 +1,8 @@
-﻿@using MudBlazor.Extensions
+﻿@page "/addentrantswizard/{SeasonId:long}"
+@using MudBlazor.Extensions
 @using MudExtensions.Enums;
 @using MudExtensions.Utilities
 
-@page "/addentrantswizard/{SeasonId:long}"
 @inject EngineService EngineService
 @inject TeamService TeamService
 @inject DriverService DriverService
@@ -60,9 +60,15 @@
                                         <MudTh>Reliability</MudTh>
                                     </HeaderContent>
                                     <RowTemplate>
-                                        <MudTd DataLabel="Name">@context.Name</MudTd>
-                                        <MudTd DataLabel="Power">@context.Power</MudTd>
-                                        <MudTd DataLabel="Reliability">@context.Reliability</MudTd>
+                                        <MudTd DataLabel="Name">
+                                            <MudText Typo="Typo.caption">@context.Name</MudText>
+                                        </MudTd>
+                                        <MudTd DataLabel="Power">
+                                            <MudText Typo="Typo.caption">@context.Power</MudText>
+                                        </MudTd>
+                                        <MudTd DataLabel="Reliability">
+                                            <MudText Typo="Typo.caption">@context.Reliability</MudText>
+                                        </MudTd>
                                     </RowTemplate>
                                     <RowEditingTemplate>
                                         <MudTd DataLabel="Name">
@@ -95,8 +101,10 @@
                                 </ToolBarContent>
                                 <RowTemplate>
                                     <MudTd DataLabel="Name">
-                                        <CountryFlag Code="@context.Country" />
-                                        @context.Name
+                                        <MudStack Row="true" Spacing="1" Class="align-center">
+                                            <CountryFlag Code="@context.Country" />
+                                            <MudText>@context.Name</MudText>
+                                        </MudStack>
                                     </MudTd>
                                 </RowTemplate>
                             </MudTable>
@@ -125,18 +133,38 @@
                                         <MudTh Style="min-width: 200px;">Manufacturer</MudTh>
                                     </HeaderContent>
                                     <RowTemplate>
-                                        <MudTd DataLabel="Team">@(context.Team?.Name ?? "Unknown")</MudTd>
-                                        <MudTd DataLabel="Name">@context.Name</MudTd>
-                                        <MudTd DataLabel="Principal">@context.Principal</MudTd>
-                                        <MudTd DataLabel="Colour">@context.Colour</MudTd>
-                                        <MudTd DataLabel="Accent">@context.Accent</MudTd>
-                                        <MudTd DataLabel="Base">@context.BaseValue</MudTd>
-                                        <MudTd DataLabel="Aero">@context.Aero</MudTd>
-                                        <MudTd DataLabel="Chassis">@context.Chassis</MudTd>
-                                        <MudTd DataLabel="Powertrain">@context.Powertrain</MudTd>
-                                        <MudTd DataLabel="Reliability">@context.Reliability</MudTd>
+                                        <MudTd DataLabel="Team">
+                                            <MudText>@(context.Team?.Name ?? "Unknown")</MudText>
+                                        </MudTd>
+                                        <MudTd DataLabel="Name">
+                                            <MudText>@context.Name</MudText>
+                                        </MudTd>
+                                        <MudTd DataLabel="Principal">
+                                            <MudText>@context.Principal</MudText>
+                                        </MudTd>
+                                        <MudTd DataLabel="Colour">
+                                            @context.Colour
+                                        </MudTd>
+                                        <MudTd DataLabel="Accent">
+                                            @context.Accent
+                                        </MudTd>
+                                        <MudTd DataLabel="Base">
+                                            <MudText Typo="Typo.caption">@context.BaseValue</MudText>
+                                        </MudTd>
+                                        <MudTd DataLabel="Aero">
+                                            <MudText Typo="Typo.caption">@context.Aero</MudText>
+                                        </MudTd>
+                                        <MudTd DataLabel="Chassis">
+                                            <MudText Typo="Typo.caption">@context.Chassis</MudText>
+                                        </MudTd>
+                                        <MudTd DataLabel="Powertrain">
+                                            <MudText Typo="Typo.caption">@context.Powertrain</MudText>
+                                        </MudTd>
+                                        <MudTd DataLabel="Reliability">
+                                            <MudText Typo="Typo.caption">@context.Reliability</MudText>
+                                        </MudTd>
                                         <MudTd DataLabel="Manufacturer">
-                                            @ReadManufacturerName(context.ManufacturerId);
+                                            <MudText>@ReadManufacturerName(context.ManufacturerId);</MudText>
                                         </MudTd>
                                     </RowTemplate>
                                     <RowEditingTemplate>
@@ -262,18 +290,32 @@
                                     </HeaderContent>
                                     <RowTemplate>
                                         <MudTd DataLabel="Name">
-                                            <CountryFlag Code="@context.Driver.Country" Size="FlagSize.Small" />
-                                            @context.Driver.FullName
+                                            <MudStack Row="true" Spacing="1" Class="align-center">
+                                                <MudText>@context.Driver.FullName</MudText>
+                                                <MudSpacer />
+                                                <CountryFlag Code="@context.Driver.Country" Size="FlagSize.Small" />
+                                            </MudStack>
                                         </MudTd>
-                                        <MudTd DataLabel="Number">@context.Number</MudTd>
-                                        <MudTd DataLabel="Skill">@context.Skill</MudTd>
-                                        <MudTd DataLabel="Reliability">@context.Reliability</MudTd>
-                                        <MudTd DataLabel="TeamRole">@context.TeamRole</MudTd>
+                                        <MudTd DataLabel="Number">
+                                            <MudText Typo="Typo.caption">@context.Number</MudText>
+                                        </MudTd>
+                                        <MudTd DataLabel="Skill">
+                                            <MudText Typo="Typo.caption">@context.Skill</MudText>
+                                        </MudTd>
+                                        <MudTd DataLabel="Reliability">
+                                            <MudText Typo="Typo.caption">@context.Reliability</MudText>
+                                        </MudTd>
+                                        <MudTd DataLabel="TeamRole">
+                                            <MudText>@context.TeamRole</MudText>
+                                        </MudTd>
                                     </RowTemplate>
                                     <RowEditingTemplate>
                                         <MudTd DataLabel="Name">
-                                            <CountryFlag Code="@context.Driver.Country" Size="FlagSize.Tiny" />
-                                            @context.Driver.FullName
+                                            <MudStack Row="true" Spacing="1" Class="align-center">
+                                                <MudText>@context.Driver.FullName</MudText>
+                                                <MudSpacer />
+                                                <CountryFlag Code="@context.Driver.Country" Size="FlagSize.Small" />
+                                            </MudStack>
                                         </MudTd>
                                         <MudTd DataLabel="Number">
                                             <MudNumericField @bind-Value="@context.Number" />
@@ -302,7 +344,7 @@
                     </MudPaper>
                 </ChildContent>
             </MudStep>
-            <MudStep Title="Assign drivers to teams">
+            <MudStep Title="Assign drivers to teams" Icon="@IconCollection.Helmet">
                 <ChildContent>
                     <MudPaper>
                         @if (!_loading)
@@ -337,8 +379,11 @@
                                 </ChildContent>
                                 <ItemRenderer>
                                     <MudListItem>
-                                        <CountryFlag Code="@context.Driver.Country" Size="FlagSize.Tiny" />
-                                        <MudText>@context.Driver.FullName</MudText>
+                                        <MudStack Row="true" Spacing="1" Class="align-center">
+                                            <MudText>@context.Driver.FullName</MudText>
+                                            <MudSpacer />
+                                            <CountryFlag Code="@context.Driver.Country" Size="FlagSize.Small" />
+                                        </MudStack>
                                     </MudListItem>
                                 </ItemRenderer>
                             </MudDropContainer>
@@ -346,7 +391,7 @@
                     </MudPaper>
                 </ChildContent>
             </MudStep>
-            <MudStep Title="Entries for season" IsResultStep="true">
+            <MudStep Title="Entries for season" IsResultStep="true" Icon="@Icons.Material.Filled.Flag">
                 <ChildContent>
                     <MudGrid>
                         <MudItem xs="12">
@@ -371,9 +416,15 @@
                                     <MudTh>Reliability</MudTh>
                                 </HeaderContent>
                                 <RowTemplate>
-                                    <MudTd DataLabel="Name">@context.Name</MudTd>
-                                    <MudTd DataLabel="Power">@context.Power</MudTd>
-                                    <MudTd DataLabel="Reliability">@context.Reliability</MudTd>
+                                    <MudTd DataLabel="Name">
+                                        <MudText>@context.Name</MudText>
+                                    </MudTd>
+                                    <MudTd DataLabel="Power">
+                                        <MudText Typo="Typo.caption">@context.Power</MudText>
+                                    </MudTd>
+                                    <MudTd DataLabel="Reliability">
+                                        <MudText Typo="Typo.caption">@context.Reliability</MudText>
+                                    </MudTd>
                                 </RowTemplate>
                             </MudTable>
                         </MudPaper>
@@ -396,20 +447,36 @@
                                 </HeaderContent>
                                 <RowTemplate>
                                     <MudTd DataLabel="Name">
-                                        @if (context.Team != null)
-                                        {
-                                            <CountryFlag Code="context.Team.Country" Size="FlagSize.Small" />
-                                        }
-                                        @context.Name
+                                        <MudStack Row="true" Spacing="1" Class="align-center">
+                                            <MudText>@context.Name</MudText>
+                                            <MudSpacer />
+                                            <CountryFlag Code="@context.Team.Country" Size="FlagSize.Small" />
+                                        </MudStack>
                                     </MudTd>
-                                    <MudTd DataLabel="Principal">@context.Principal</MudTd>
-                                    <MudTd DataLabel="Colour">@context.Colour</MudTd>
-                                    <MudTd DataLabel="Accent">@context.Accent</MudTd>
-                                    <MudTd DataLabel="BaseValue">@context.BaseValue</MudTd>
-                                    <MudTd DataLabel="Aero">@context.Aero</MudTd>
-                                    <MudTd DataLabel="Chassis">@context.Chassis</MudTd>
-                                    <MudTd DataLabel="Powertrain">@context.Powertrain</MudTd>
-                                    <MudTd DataLabel="Reliability">@context.Reliability</MudTd>
+                                    <MudTd DataLabel="Principal">
+                                        <MudText>@context.Principal</MudText>
+                                    </MudTd>
+                                    <MudTd DataLabel="Colour">
+                                        @context.Colour
+                                    </MudTd>
+                                    <MudTd DataLabel="Accent">
+                                        @context.Accent
+                                    </MudTd>
+                                    <MudTd DataLabel="BaseValue">
+                                        <MudText Typo="Typo.caption">@context.BaseValue</MudText>
+                                    </MudTd>
+                                    <MudTd DataLabel="Aero">
+                                        <MudText Typo="Typo.caption">@context.Aero</MudText>
+                                    </MudTd>
+                                    <MudTd DataLabel="Chassis">
+                                        <MudText Typo="Typo.caption">@context.Chassis</MudText>
+                                    </MudTd>
+                                    <MudTd DataLabel="Powertrain">
+                                        <MudText Typo="Typo.caption">@context.Powertrain</MudText>
+                                    </MudTd>
+                                    <MudTd DataLabel="Reliability">
+                                        <MudText Typo="Typo.caption">@context.Reliability</MudText>
+                                    </MudTd>
                                 </RowTemplate>
                             </MudTable>
                         </MudPaper>
@@ -428,20 +495,24 @@
                                 </HeaderContent>
                                 <RowTemplate>
                                     <MudTd DataLabel="Name">
-                                        @if (context.Driver != null)
-                                        {
+                                        <MudStack Row="true" Spacing="1" Class="align-center">
+                                            <MudText>@context.Driver.FullName</MudText>
+                                            <MudSpacer />
                                             <CountryFlag Code="@context.Driver.Country" Size="FlagSize.Small" />
-                                            @context.Driver.FullName
-                                        }
-                                        else
-                                        {
-                                            <span>Unknown (wtf how did you do this?)</span>
-                                        }
+                                        </MudStack>
                                     </MudTd>
-                                    <MudTd DataLabel="Number">@context.Number</MudTd>
-                                    <MudTd DataLabel="Skill">@context.Skill</MudTd>
-                                    <MudTd DataLabel="Reliability">@context.Reliability</MudTd>
-                                    <MudTd DataLabel="TeamRole">@context.TeamRole</MudTd>
+                                    <MudTd DataLabel="Number">
+                                        <MudText Typo="Typo.caption">@context.Number</MudText>
+                                    </MudTd>
+                                    <MudTd DataLabel="Skill">
+                                        <MudText Typo="Typo.caption">@context.Skill</MudText>
+                                    </MudTd>
+                                    <MudTd DataLabel="Reliability">
+                                        <MudText Typo="Typo.caption">@context.Reliability</MudText>
+                                    </MudTd>
+                                    <MudTd DataLabel="TeamRole">
+                                        <MudText>@context.TeamRole</MudText>
+                                    </MudTd>
                                 </RowTemplate>
                             </MudTable>
                         </MudPaper>
