--- a/SimTECH/SimTECH/Pages/Season/SeasonDrivers.razor
+++ b/SimTECH/SimTECH/Pages/Season/SeasonDrivers.razor
@@ -9,12 +9,14 @@
         <MudButton Variant="Variant.Filled" Color="Color.Success" StartIcon="@Icons.Material.Outlined.Add" OnClick="EnterDriver">New</MudButton>
     </ToolBarContent>
     <Columns>
+        <HierarchyColumn T="SeasonDriver" />
         <TemplateColumn T="SeasonDriver" Title="Name" SortBy="e => e.Driver.FirstName">
             <CellTemplate>
-                <MudText Typo="Typo.body2">
+                <MudStack Row="true" AlignItems="AlignItems.Center">
+                    <MudText>@context.Item.Driver.FullName</MudText>
+                    <MudSpacer />
                     <CountryFlag Code="@context.Item.Driver.Country" Size="FlagSize.Small" />
-                    @context.Item.Driver.FullName
-                </MudText>
+                </MudStack>
             </CellTemplate>
         </TemplateColumn>
         <PropertyColumn Property="e => e.Number" SortBy="e => e.Number" Title="Nr." CellStyleFunc="@ViewHelper.DriverTeamStyleFunc" HeaderClass="number-col" CellClass="number-col" />
@@ -33,7 +35,7 @@
                 }
             </CellTemplate>
         </TemplateColumn>
-        <TemplateColumn T="SeasonDriver" Sortable="false" CellClass="d-flex justify-end">
+        <TemplateColumn T="SeasonDriver" Sortable="false">
             <CellTemplate>
                 <MudButtonGroup>
                     <MudIconButton Size="Size.Small" Icon="@Icons.Material.Outlined.Edit" OnClick="@(async () => await UpdateDriverEntrant(context.Item))" />
