--- a/SimTECH/SimTECH/Pages/Season/WccResultChart.razor
+++ b/SimTECH/SimTECH/Pages/Season/WccResultChart.razor
@@ -1,7 +1,7 @@
 ﻿<MudDialog>
     <TitleContent>
         <MudIcon Icon="@Icons.Material.Filled.SsidChart" Class="mr-3 mb-n1"></MudIcon>
-        WCC Chart
+        <MudText>WCC Chart</MudText>
     </TitleContent>
     <DialogContent>
         <MudContainer Class="pa-2">
