--- a/SimTECH/SimTECH/wwwroot/css/site.css
+++ b/SimTECH/SimTECH/wwwroot/css/site.css
@@ -108,14 +108,43 @@ th {
     width: 800px;
 }
 
-.dialog-shadow {
-    box-shadow: var(--mud-palette-secondary) 0 0 2em;
-}
-
 /* page specific stylings */
 .result-cell {
     border: 0.5px solid black !important;
     color: black !important;
+}
+
+/* extensions on mudblazor css variables */
+.dialog-shadow {
+    box-shadow: var(--mud-palette-secondary) 0 0 2em;
+}
+
+.font-default {
+    font-family: var(--mud-typography-default-family);
+}
+
+.font-button {
+    font-family: var(--mud-typography-button-family);
+}
+
+.font-header {
+    font-family: var(--mud-typography-h1-family);
+}
+
+.font-caption {
+    font-family: F1Bold;
+}
+
+.font-overline {
+    font-family: var(--mud-typography-overline-family);
+}
+
+.font-subtitle1 {
+    font-family: var(--mud-typography-subtitle1-family);
+}
+
+.font-subtitle2 {
+    font-family: var(--mud-typography-subtitle2-family);
 }
 
 /* default blazor css elements */
