Modifiers, for him and for her

--- a/SimTECH/SimTECH/Components/CountryFlag.razor
+++ b/SimTECH/SimTECH/Components/CountryFlag.razor
@@ -1,10 +1,10 @@
-﻿<span>
+﻿<MudText>
     <span class="@flagIconClass">@flagIcon</span>
     @if (IncludeName)
     {
-        <MudText>@flagNationName</MudText>
+        <span class="ml-2">@flagNationName</span>
     }
-</span>
+</MudText>
 
 @code {
     [Parameter]
