--- a/SimTECH/SimTECH/Pages/Setup/Tracks.razor
+++ b/SimTECH/SimTECH/Pages/Setup/Tracks.razor
@@ -50,6 +50,11 @@
                 </CellTemplate>
             </TemplateColumn>
         </Columns>
+        <ChildRowContent>
+            <MudPaper>
+                <MudText>@context.Item.Name</MudText>
+            </MudPaper>
+        </ChildRowContent>
     </MudDataGrid>
 </MudContainer>
 
