--- a/SimTECH/SimTECH/Pages/Index.razor
+++ b/SimTECH/SimTECH/Pages/Index.razor
@@ -11,7 +11,7 @@
     <MudGrid>
         <MudItem xs="12" sm="6" md="4">
             <MudPaper Elevation="2" Class="pa-4" Style="height: 300px;">
-                <MudText Typo="Typo.overline">_config:</MudText>
+                <MudText Typo="Typo.overline">Config</MudText>
                 <MudText Typo="Typo.body2">Fatal odds: @_config.Value.FatalityChance</MudText>
                 <MudText Typo="Typo.body2">Dsq odds: @_config.Value.DisqualifyChance</MudText>
                 <MudText Typo="Typo.body2">Gap marge p/pt: @_config.Value.GapMarge</MudText>
@@ -21,16 +21,14 @@
                 <MudText Typo="Typo.body2">Mistake max rng: @_config.Value.MistakeUpperValue</MudText>
             </MudPaper>
         </MudItem>
-
         <MudItem xs="12" sm="6" md="4">
             <MudPaper Elevation="2" Class="pa-4" Style="height: 300px;">
                 <MudText Typo="Typo.h2">SimTECH</MudText>
             </MudPaper>
         </MudItem>
-
         <MudItem xs="12" sm="12" md="4">
             <MudPaper Elevation="2" Class="pa-4" Style="height: 300px;">
-                <MudText Typo="Typo.overline">_config:</MudText>
+                <MudText Typo="Typo.overline">Config</MudText>
                 <MudText Typo="Typo.body2">Sunny engine multiplier: @_config.Value.SunnyEngineMultiplier</MudText>
                 <MudText Typo="Typo.body2">Overcast engine multiplier: @_config.Value.OvercastEngineMultiplier</MudText>
                 <MudText Typo="Typo.body2">Wet engine multiplier: @_config.Value.WetEngineMultiplier</MudText>
@@ -40,23 +38,16 @@
                 <MudText Typo="Typo.body2">Storm reliability: @_config.Value.StormDriverReliabilityModifier</MudText>
             </MudPaper>
         </MudItem>
-
         <MudItem xs="12" sm="6">
             <MudGrid>
                 <MudItem xs="12">
                     <MudPaper Elevation="2" Class="pa-4" Style="height: 300px;">
-                        <MudText Typo="Typo.h6">Examples</MudText>
-                        
+                        <MudText Typo="Typo.h5">Examples</MudText>
                         <div>
                             <!-- Local storage value -->
                             <MudButton Variant="Variant.Text" Color="Color.Primary" OnClick="SetExample">Set store</MudButton>
                             <MudText>@exampleStore</MudText>
                         </div>
-                    </MudPaper>
-                </MudItem>
-
-                <MudItem xs="12">
-                    <MudPaper Elevation="2" Class="pa-4" Style="height: 300px;">
                         <MudStack Row="true">
                             <MudText Typo="Typo.h6">Custom Icon Cycler</MudText>
                             <MudSpacer />
@@ -68,9 +59,11 @@
                         <MudIcon Icon="@activeCustomIcon" />
                     </MudPaper>
                 </MudItem>
+                <MudItem xs="12">
+                    <MudPaper Elevation="2" Class="pa-4" Style="height: 300px;"></MudPaper>
+                </MudItem>
             </MudGrid>
         </MudItem>
-
         <MudItem xs="12" sm="6">
             <MudPaper Elevation="2" Class="pa-4 mud-height-full">
                 @if (recentRaces != null)
@@ -84,53 +77,49 @@
                         <HeaderContent>
                             <MudTh>League</MudTh>
                             <MudTh>Round</MudTh>
-                            <MudTh>Name</MudTh>
+                            <MudTh>Race</MudTh>
+                            <MudTh Class="pa-0"></MudTh>
                             <MudTh>Winning driver</MudTh>
+                            <MudTh Class="number-col">No.</MudTh>
                             <MudTh>Winning team</MudTh>
                         </HeaderContent>
                         <RowTemplate>
-                            <MudTd>@context.LeagueName</MudTd>
                             <MudTd>
-                                <MudText Typo="Typo.body2">
-                                    <CountryFlag Code="@context.Country" Size="FlagSize.Tiny" />
-                                    Round: @context.Round
-                                </MudText>
+                                <MudText Typo="Typo.body2">@context.LeagueName</MudText>
                             </MudTd>
-                            <MudTd>@context.Name</MudTd>
                             <MudTd>
-                                <MudStack Row="true">
-                                    <MudText Typo="Typo.body2">
-                                        <CountryFlag Code="@context.WinningDriver.Country" Size="FlagSize.Tiny" />
-                                        @context.WinningDriver.Name
-                                    </MudText>
-                                    <MudChip Variant="Variant.Text" Size="Size.Small" Color="NextColour()" DisableRipple="true">
-                                        @context.WinningDriver.Number
-                                    </MudChip>
+                                <MudStack Row="true" Spacing="1" AlignItems="AlignItems.Center">
+                                    <MudText Typo="Typo.body2">Round: @context.Round</MudText>
+                                    <MudSpacer />
+                                    <CountryFlag Code="@context.Country" Size="FlagSize.Tiny" />
                                 </MudStack>
                             </MudTd>
-                            <MudTd Style="@ViewHelper.SetBorderLeftStyle(context.WinningTeam.Colour)">
-                                <MudText Typo="Typo.body2">
+                            <MudTd>
+                                <MudText Typo="Typo.body2">@context.Name</MudText>
+                            </MudTd>
+                            <MudTd Class="pa-0">
+                                <span class="smol-accent" style="@(ViewHelper.SetBackgroundColour(context.WinningDriver.Colour))"></span>
+                            </MudTd>
+                            <MudTd>
+                                <MudStack Row="true" Spacing="1" AlignItems="AlignItems.Center">
+                                    <MudText Typo="Typo.body2">@context.WinningDriver.Name</MudText>
+                                    <MudSpacer />
+                                    <CountryFlag Code="@context.WinningDriver.Country" Size="FlagSize.Tiny" />
+                                </MudStack>
+                            </MudTd>
+                            <MudTd Class="number-col" Style="@(ViewHelper.SetFullColourstyle(context.WinningDriver.Colour, context.WinningDriver.Accent))">
+                                <MudText Typo="Typo.caption">@context.WinningDriver.Number</MudText>
+                            </MudTd>
+                            <MudTd>
+                                <MudStack Row="true" Spacing="1" AlignItems="AlignItems.Center">
+                                    <MudText Typo="Typo.body2">@context.WinningTeam.Name</MudText>
+                                    <MudSpacer />
                                     <CountryFlag Code="@context.WinningTeam.Country" Size="FlagSize.Tiny" />
-                                    @context.WinningTeam.Name
-                                </MudText>
+                                </MudStack>
                             </MudTd>
                         </RowTemplate>
                     </MudTable>
                 }
-            </MudPaper>
-        </MudItem>
-
-        <MudItem xs="12">
-            <MudPaper>
-                <MudStack>
-                    <MudText Typo="Typo.body1">Quick brown fox does quick brown fox things</MudText>
-                    <MudText Typo="Typo.button">Quick brown fox does quick brown fox things</MudText>
-                    <MudText Typo="Typo.subtitle1">Quick brown fox does quick brown fox things</MudText>
-                    <MudText Typo="Typo.subtitle2">Quick brown fox does quick brown fox things</MudText>
-                    <MudText Typo="Typo.h6">Quick brown fox does quick brown fox things</MudText>
-                    <MudText Typo="Typo.overline">Quick brown fox does quick brown fox things</MudText>
-                    <MudText Typo="Typo.caption">Quick brown fox does quick brown fox things</MudText>
-                </MudStack>
             </MudPaper>
         </MudItem>
     </MudGrid>
@@ -139,8 +128,6 @@
 @code {
     List<FinishedRaceModel> recentRaces;
     int raceAmount = 5;
-    Color[] cycleColours = (Color[])Enum.GetValues(typeof(Color));
-    int cycler = 0;
     string activeCustomIcon = IconCollection.BrandToyota;
     string[] customIcons = IconCollection.ArrayOfIcons;
     int iconCycler = 0;
@@ -163,14 +150,6 @@
         var storedExample = await LocalStorage.GetAsync<string>("example");
         if (storedExample.Success)
             exampleStore = storedExample.Value;
-    }
-
-    Color NextColour()
-    {
-        cycler++;
-        cycler %= cycleColours.Length;
-
-        return cycleColours[cycler];
     }
 
     void CycleCustomIcon()
